1.0-beta16:

  * better error handling in reddit poll loop (recover from connection issues)
  * improve amount parser ("1 cent." now works, for example)
  * better info when autopay fails on wallets with pw
 
+++

1.0-beta15:

  * errors during initial import are reported to user and output to console
  * chaintip comment association fixed
  * new status "autopaying..." to help avoid double-payments

1.0-beta14:

  * persist list of tips to wallet file
  * new "import" procedure to initially fill list of tips (if empty or old version)
  * make activation/reactivation through status bar button more robust (no more crash)
  * remove all existing "mark read", "mark unread" functions and automatically marking finished tips
  * new preference "mark read when digested"
  * changes to autopay logic (more wait periods to wait for blockchain info)
  * new "remove" function to remove tips from list
  * new "copy recipient address(es)" function


1.0-beta13:

  * fix bug with update_checker always thinking there's a new version
  * do not run update_checker before chaintipper activation



1.0-beta12:

  * listen to blockchain instead of only connected wallet for payments
  * open blockexplorer to payment tx (#1, #2, #3), remove old tip.payment_txhash
  * parse chaintip confirmation comment
  * performance improvement
  * fix claim/return registration
  * use same association scheme for confirmation comments as for claim/return
  * mark confirmation comments read on mark_unread of the associated tip)
  * new "open browser to claim/return message"
  * new "open browser to chaintip confirmation comment"
  * fix "Tip claimed." falsely interpreted as tip message: msg id 11p4fo7
  * performance: deferred tipping comment loading 
  * only load tipping comments for unpaid tips currently
  * solve autopay triggering (a thread? some grace status and activation by reddit thread?)
  * handle stealth mode "Tip funded." message (sent when stealth-tipping a post)